chore: use awaitility instead of Thread.sleep